Fixed Insta login + removed scrollbar in webkit browsers

--- a/UGWFrontend/src/styles.scss
+++ b/UGWFrontend/src/styles.scss
@@ -124,3 +124,8 @@ td {
   font-size: .8125rem;
   margin: 0;
 }
+
+::-webkit-scrollbar {
+  width: 0;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
